--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_marginTop="64dp"
-        android:src="@drawable/avatar2"
+        android:src="@drawable/icon"
         app:civ_border_color="#EEEEEE"
         app:civ_border_width="4dp"
         app:civ_shadow="true"
