--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -38,6 +38,8 @@
             android:layout_marginTop="16dp"
             android:text="Type of Game"
             android:textSize="24dp"
+            android:drawableLeft="@drawable/ic_https"
+            android:drawablePadding="5dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
