--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -36,9 +36,10 @@
         app:layout_constraintTop_toBottomOf="@+id/fragment_profle_tf_getPhoto">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/activity_logup_tf_username_tx"
+            android:id="@+id/fragment_profle_ti_username_tx"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:enabled="false"
             android:textColor="#C2BD63" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,15 +55,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_profle_tf_username">
+
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/activity_logup_tf_email_tx"
+            android:id="@+id/fragment_profle_tf_email_tx"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#C2BD63"
-            android:inputType="textWebEmailAddress" />
+            android:inputType="textWebEmailAddress"
+            android:enabled="false"
+            android:textColor="#C2BD63" />
     </com.google.android.material.textfield.TextInputLayout>
-
-    <!-- DATE PICKER-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/fragment_profile_tf_birthday"
@@ -73,13 +74,13 @@
         android:layout_marginEnd="64dp"
         android:hint="Birthday"
         android:textColorHint="#C2BD63"
-        app:layout_constraintEnd_toStartOf="@+id/activity_logup_btn_getDate"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/activity_logup_btn_getDate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_profle_tf_email">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/activity_logup_tf_birthday"
+            android:id="@+id/fragment_profile_tf_birthday_tx"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:enabled="false"
