Changed fragment and added groups fragment

--- a/app/src/main/res/menu/main_screen_menu.xml
+++ b/app/src/main/res/menu/main_screen_menu.xml
@@ -7,6 +7,11 @@
         android:icon="@drawable/ic_menu_mail"
         android:title="Mail"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_game"
+        android:icon="@drawable/coffe"
+        android:title="Game"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_groups"
